--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@threlte/core": "^8.0.1",
+		"@threlte/extras": "^9.0.1",
+		"@types/three": "^0.174.0",
+		"three": "^0.174.0"
 	}
 }
